apps/ai-act-beslisboom/sandbox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ai-act-decisiontree
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ai-act-beslisboom-image
          name: ai-act-decisiontree
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 800m
              memory: 256Mi
              ephemeral-storage: "256Mi"
            requests:
              cpu: 500m
              memory: 128Mi
      imagePullSecrets:
        - name: minbzk-registry
